# Enigma

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
advisor/: config.py  converter.py  database.py  datafeed.py  engine.py  gateway.py  logger.py  module.py  package.py
advisor/models/: __init__.py  errors.py
enigma/: __init__.py  config.py  gateway.py  logger.py  logging.py  module.py
enigma/core/: converter.py  engine.py  event.py  gateway.py  logging.py  package.py
enigma/core/enum/: __init__.py  event.py  gateway.py
enigma/models/: __init__.py  enums.py
package/: engine.py  gateway.py  logger.py  module.py
package/models/: __init__.py
